--- a/doc/tenuki29.tex
+++ b/doc/tenuki29.tex
@@ -25,7 +25,7 @@
 \subsubsection*{鈴木太朗}
 鈴木はプログラマです。会社員をしています。
 仕事のかたわら趣味の自転車と合唱に打ち込んでいます。
-趣味のかたわら手抜きを作っていますが完成させる自信がありません
+そのかたわら手抜きを作っていますが完成させる自信がありません
 （夏休みの宿題を9月1日にやるタイプです）。
 棋力は30級程度です。
 Twitter: @hikaen2
@@ -46,14 +46,16 @@ Twitter: @Neakih\_kick
 
 Ryzenを買っちゃったのでマルチスレッドにします。
 これからLazy SMPを実装します。
-スレッドがよくわからないし，実装できても正しく実装できているか分からなそうな予感がします。
+スレッドがよくわかりません。
+実装できても正しく実装できているか分からなそうな予感がします。
 
 \begin{itemize}
 \item KPPTで評価する
 \end{itemize}
 
 去年はなのはさんの評価バイナリでKP + PPで評価しました。
-今年はAperyの評価バイナリでKPPTで評価しようと思います。
+今年はAperyの評価バイナリ（大樹の枝形式）でKPPTで評価しようと思います。
+Aperyの選定理由は評価バイナリがKPPTだからです。
 予想として，静的評価に手番が含まれると静止探索がいらないか，もしくは軽くていいのではないかと思っています。
 
 評価バイナリの自作については来年挑戦します。
@@ -71,7 +73,7 @@ Ryzenを買っちゃったのでマルチスレッドにします。
 第28回世界コンピュータ将棋選手権：
 \begin{itemize}
 \item ルール通りに指す → 結果：ルール通り指した？
-\item 投了する（WCSC27では投了しないで王手放置していた） → 結果：投了した。一次予選4勝4敗
+\item 投了する（第27回では王手放置していた） → 結果：投了した。一次予選4勝4敗
 \item KPで評価する → 結果：なのはさんの評価バイナリでKP + PPで評価した
 \end{itemize}
 
