図を差し替え

--- a/doc/tenuki29.tex
+++ b/doc/tenuki29.tex
@@ -93,7 +93,7 @@ Aperyの選定理由は評価バイナリがKPPTだからです。
 
 \begin{figure}[H]
   \centering
-  \includegraphics{fig1.png}
+  \includegraphics{fig/fig1.pdf}
   \caption{盤面のデータ構造}
 \end{figure}
 
@@ -106,7 +106,7 @@ Aperyの選定理由は評価バイナリがKPPTだからです。
 \begin{table}[H]
   \centering
   \caption{値の意味}
-  \includegraphics{fig2.png}
+  \includegraphics{fig/fig2.pdf}
 \end{table}
 
 第28回世界コンピュータ将棋選手権では手番と成りをビット演算で管理していましたが，表で管理するようにしました。こうするとビットレイアウトを考えなくて済む利点があります。
