--- a/doc/tenuki29.tex
+++ b/doc/tenuki29.tex
@@ -47,7 +47,7 @@ Twitter: @Neakih\_kick
 Ryzenを買っちゃったのでマルチスレッドにします。
 これからLazy SMPを実装します。
 スレッドがよくわかりません。
-実装できても正しく実装できているか分からなそうな予感がします。
+実装できても正しく実装できているか分からない予感がします。
 
 \begin{itemize}
 \item KPPTで評価する
@@ -72,7 +72,7 @@ Aperyの選定理由は評価バイナリがKPPTだからです。
 
 第28回世界コンピュータ将棋選手権：
 \begin{itemize}
-\item ルール通りに指す → 結果：ルール通り指した？
+\item ルール通りに指す → 結果：ルール通り指した（けど千日手のチェックをしてない）
 \item 投了する（第27回では王手放置していた） → 結果：投了した。一次予選4勝4敗
 \item KPで評価する → 結果：なのはさんの評価バイナリでKP + PPで評価した
 \end{itemize}
@@ -85,11 +85,13 @@ Aperyの選定理由は評価バイナリがKPPTだからです。
 
 
 
-\section{データ構造}
+\section{プログラムの構造}
 
-この章では手抜きのデータ構造の説明をします。
+この章では手抜きの構造の説明をします。
 
-手抜きの盤面には81要素の1次元配列を使用しています。そのアドレッシングはこうです：
+\subsection{データ構造}
+
+盤面に81要素の1次元配列を使用しています。そのアドレッシングはこうです：
 
 \begin{figure}[H]
   \centering
@@ -109,6 +111,44 @@ Aperyの選定理由は評価バイナリがKPPTだからです。
   \includegraphics{fig/fig2.pdf}
 \end{table}
 
-第28回世界コンピュータ将棋選手権では手番と成りをビット演算で管理していましたが，表で管理するようにしました。こうするとビットレイアウトを考えなくて済む利点があります。
+第28回世界コンピュータ将棋選手権では手番と成りをビット演算で管理していましたが，表で管理するようにしました。
+表で管理するとビットレイアウトを考えなくて済む利点があります。
+一方，表を引くのに（ビット演算よりは）時間がかかる欠点がありそうです。
+
+表のtype(A)の列からinv(A)の列まではA列の関数です。
+意味はこうです：
+
+\begin{itemize}
+  \item type(A): Aから手番を除いた値を返す。
+  \item base(A): Aから手番を除いて成りを戻した値を返す。駒を取ったときに使う。
+  \item color(A): Aの手番を返す。
+  \item promotable(A): Aが成れる駒かどうかを返す。
+  \item promote(A): Aが成った駒を返す。
+  \item inv(A): Aの手番を反転した駒を返す。
+\end{itemize}
+
+こうして見ると全部で6つあって多いように思います。
+全部で4つくらいになってもいいような気がします。
+
+
+\subsection{探索}
+
+mini-max探索をしています。
+
+\begin{itemize}
+  \item αβ枝刈りをしています。最近やっとαβ枝刈りが何なのか分かるようになりました。
+  \item null-move枝刈りをしています。
+  \item 静止探索しています。
+  \item 指し手だけの置換表（指し手表?）があります。表のエントリは指し手だけです。
+  一般的な置換表のエントリにはミスヒット検出のために局面のハッシュ値が入れてありますが，手抜きでは入れていません。
+  指し手だけの表なのでミスヒットしても害がないと考えているためです。しかしLazy SMPしはじめると問題があるかもしれません。
+  \item Lazy SMPしたいです。
+  \item futility枝刈りしていません。静的評価が差分評価でないからです。
+\end{itemize}
+
+
+\subsection{静的評価}
+
+Apery, commit 3221627（2016年11月3日）の評価バイナリを使ってKPPTで評価する予定です。
 
 \end{document}
