--- a/doc/tenuki29.tex
+++ b/doc/tenuki29.tex
@@ -2,7 +2,7 @@
 \nonstopmode
 
 
-\documentclass[a4paper]{ltjsarticle}
+\documentclass[10pt,a4paper]{ltjsarticle}
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{here}
